--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -1051,6 +1051,7 @@ Din moment ce utilizarea datelor este măsurată de către telefonul dvs., iar o
     <string name="device_name">Nume dispozitiv</string>
     <string name="device_name_input_error">Nu s-a putut salva numele dispozitivului</string>
     <string name="device_name_input_hint">Introduceţi numele dispozitivului dvs.</string>
+    <string name="device_name_input_overlength">Peste limita de lungime a cuvântului??</string>
     <string name="device_name_usage_point">Alte dispozitive din apropiere pot vedea acest nume</string>
     <string name="device_picker">Selector de dispozitive Bluetooth</string>
     <string name="device_rear_camera">Camera posterioară</string>
@@ -1333,6 +1334,8 @@ Este posibil ca unele aplicaţii să nu funcţioneze înainte de a fi actualizat
     <string name="firmware_version">Versiune Android</string>
     <string name="floating_window_switch_label">Activaţi fereastra plutitoare</string>
     <string name="floating_window_switch_label_disable">Dezactivaţi fereastra plutitoare</string>
+    <string name="fluency_mode">Animații de sistem</string>
+    <string name="fluency_mode_confirm_and_reboot">Reporniți acum</string>
     <string name="font_size_exhuge">Imens</string>
     <string name="font_size_huge">Imens</string>
     <string name="font_size_large">Mai mare</string>
@@ -1499,6 +1502,7 @@ Este posibil ca unele aplicaţii să nu funcţioneze înainte de a fi actualizat
     <string name="input_method_selector">Selector al metodei de intrare</string>
     <string name="input_method_selector_always_hide_title">Ascundeţi întotdeauna</string>
     <string name="input_method_selector_always_show_title">Afişaţi întotdeauna</string>
+    <string name="input_method_selector_always_show_title">Arată întotdeauna</string>
     <string name="input_method_selector_show_automatically_title">Automat</string>
     <string name="input_method_settings">Setări</string>
     <string name="input_method_settings_button">Setări</string>
@@ -1563,8 +1567,12 @@ Este posibil ca unele aplicaţii să nu funcţioneze înainte de a fi actualizat
     <string name="keyguard_shortcut_summary">Setați în blocarea ecranului widgeturi pentru 2 aplicații</string>
     <string name="keyguard_shortcut_title">Widgeturi în blocarea ecranului</string>
     <string name="keywords_accounts">cont</string>
+    <string name="keywords_airplane">Avion;Mod Avion;Aeroplan;Mod Aeroplan;Zbor;Mod Zbor</string>
     <string name="keywords_app">Memorie RAM</string>
+    <string name="keywords_auto_rotate">Rotire;Rotirea ecranului;Orientare;Orientarea ecranului;Portret;Peisaj;vertical;orizontal</string>
     <string name="keywords_battery">energie</string>
+    <string name="keywords_bluetooth">Bluetooth;bluetooth;blue tooth</string>
+    <string name="keywords_data">4G;3G;Date;Date mobile;Date celulare;Trafic;Internet mobil</string>
     <string name="keywords_date_and_time">ceas</string>
     <string name="keywords_display">ecran</string>
     <string name="keywords_display_auto_brightness">reduceți luminozitatea ecranului</string>
@@ -1572,23 +1580,32 @@ Este posibil ca unele aplicaţii să nu funcţioneze înainte de a fi actualizat
     <string name="keywords_display_cast_screen">proiectare ecran</string>
     <string name="keywords_display_font_size">dimensiune text</string>
     <string name="keywords_display_wallpaper">imagine de fundal</string>
+    <string name="keywords_do_not_disturb">DND;mod DND;Nu deranjați;Somn;Noapte;Ocupat</string>
     <string name="keywords_factory_data_reset">resetare la configurarea din fabrică</string>
+    <string name="keywords_gps">GPS;Locație;Servicii de localizare;Satelit</string>
     <string name="keywords_home">lansator de sistem</string>
+    <string name="keywords_hotspot">Hotspot;Tether;Tethering;Hotspot personal;Hotspot portabil</string>
     <string name="keywords_keyboard_and_ime">text corectare corect sunet vibrare auto limbă gest sugerare sugestie temă ofensator cuvânt scriere emoji</string>
     <string name="keywords_location">raportare istoric de proximitate</string>
     <string name="keywords_location_mode">acuratețe</string>
     <string name="keywords_lockscreen">glisați parolă model de deblocare pin</string>
     <string name="keywords_more_default_sms_app">mesaj text</string>
     <string name="keywords_more_mobile_networks">mobil celulă operator Wi-Fi</string>
+    <string name="keywords_paper_mode">Flux;Citire;Mod citire;Lumină albastră;protejare ochi</string>
     <string name="keywords_printing">imprimantă</string>
+    <string name="keywords_quick_ball">Asistent ecran;scurtătură;scurtături;butoane;buton</string>
+    <string name="keywords_silent">Silențios;Mut;Dezactivare sunet</string>
     <string name="keywords_sounds_and_notifications">difuzor beep</string>
     <string name="keywords_sounds_and_notifications_interruptions">"nu deranjați întrerupe întrerupere pauză"</string>
     <string name="keywords_spell_checker">ortografie</string>
     <string name="keywords_storage">spațiu disc HDD</string>
+    <string name="keywords_sync">Sinc;Sincronizare;Cloud</string>
     <string name="keywords_text_to_speech_output">rată limbă implicit rostire</string>
+    <string name="keywords_torch">Lanternă;Bliț</string>
     <string name="keywords_users">restricție restricționare resctricționat</string>
+    <string name="keywords_vibrate">Vibrare;Vibrații</string>
     <string name="keywords_voice_input">recunoaștere introducere vorbire cuvânt limbă hands-free mâini libere recunoaștere ofensator audio istoric bluetooth cască</string>
-    <string name="keywords_wifi">wifi wi-fi rețea conexiune</string>
+    <string name="keywords_wifi">wifi;wi-fi;WLAN;WLAN;wlan;WLAN</string>
     <string name="language_keyboard_settings_title">Limbă şi metodă de introducere</string>
     <string name="language_picker_title">Limba</string>
     <string name="language_settings">Limbă şi metodă de introducere</string>
@@ -2225,13 +2242,10 @@ Selectaţi sistemul de operare de mai jos:"</string>
     <string name="permission_detail_info">Detalii permisiuni</string>
     <string name="permission_detail_info_summary">Securitate: %1$d | Confidenţialitate: %2$d | Altele: %3$d</string>
     <string name="permission_manage">Gestionare permisiuni</string>
-    <string name="permission_manage_global_build_title">Alte permisiuni</string>
     <string name="permission_manage_summary">Gestionați opțiunile de securitate și permisiunile</string>
     <string name="permission_manage_title">Permisiuni pentru %s</string>
     <string name="permission_manager">Permisiuni</string>
     <string name="permission_mgr">Permisiuni</string>
-    <string name="permission_settings_summary">Gestionați permisiunile legate de localizare, stocare, telefon, mesaje și contacte.</string>
-    <string name="permission_settings_title">Permisiuni aplicaţie</string>
     <string name="permissions_label">Permisiuni</string>
     <string name="personal_data_section_title">Date personale</string>
     <string name="personal_device_admin_title">Personal</string>
@@ -2609,7 +2623,7 @@ Această setare afectează toţi utilizatorii acestui telefon."</string>
     <string name="runningservicedetails_stop_dlg_title">Opriţi serviciul sistemului?</string>
     <string name="runningservices_settings_summary">Vedeţi şi controlaţi serviciile care funcţionează în prezent</string>
     <string name="runningservices_settings_title">Servicii în curs de funcţionare</string>
-    <string name="saved_wifi">Rețele Wi-Fi salvate</string>
+    <string name="saved_wifi">Gestionați rețelele Wi-Fi salvate</string>
     <string name="saved_wifi_delete">Ștergeți</string>
     <string name="scan_list_label">Rezultate scanare:</string>
     <string name="screen">Ecran</string>
@@ -2633,7 +2647,7 @@ Această setare afectează toţi utilizatorii acestui telefon."</string>
     <string name="screen_monochrome_mode_apps_title">Utilizați modul Monocrom</string>
     <string name="screen_monochrome_mode_global_summary">Utilizați modul Monocrom pentru toate aplicațiile</string>
     <string name="screen_monochrome_mode_global_title">Toate aplicațiile</string>
-    <string name="screen_monochrome_mode_local_summary"> Utilizați modul Monocrom pentru aplicațiile pe care le selectați</string>
+    <string name="screen_monochrome_mode_local_summary"> Utilizați modul Monocrom pentru aplicațiile selectate</string>
     <string name="screen_monochrome_mode_local_title">Aplicații selectate</string>
     <string name="screen_monochrome_mode_off_apps_title">"Nu utiliza modul Monocrom"</string>
     <string name="screen_monochrome_mode_set_apps_title">Aplicații în modul Monocrom</string>
