--- a/Romanian/main/CloudService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/strings.xml
@@ -14,7 +14,7 @@
     <string name="antispam_sync">Setări Nu deranjaţi</string>
     <string name="app_name">Mi Cloud</string>
     <string name="apple_10gb">20 GB</string>
-    <string name="apple_cloud">Servicii Apple Cloud</string>
+    <string name="apple_cloud">iCloud</string>
     <string name="apple_cloud_eng">iCloud</string>
     <string name="apple_cloud_price">Aproximativ 10 euro pe an</string>
     <string name="bad_authentication">Nume utilizator sau parolă greşite</string>
@@ -288,7 +288,7 @@ Pentru a rezolva acest lucru, fie puteți şterge unele fișierele vechi, fie pu
     <string name="micloud_main_wlan_sync_data_count">Elemente care aşteaptă sincronizarea: %d</string>
     <string name="micloud_member">Apartenență Mi Cloud</string>
     <string name="micloud_member_advantage">Obțineţi mai mult spațiu de stocare.</string>
-    <string name="micloud_member_buy_content" formatted="false">"Valid pentru %s-%s-%s
+    <string name="micloud_member_buy_content" formatted="false">"Valid până la %s-%s-%s
 
 %s Credite Mi"</string>
     <string name="micloud_member_buy_title">Confirmaţi comanda</string>
