--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -682,6 +682,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="set_face_group_toast_title_old_user">Persoanele pot fi sortate în grupuri</string>
     <string name="set_face_image">Setați o nouă fotografie de profil</string>
     <string name="set_group">Setați grupul</string>
+    <string name="set_wallpaper_get_image_failed">"Nu s-a putut descărca imaginea; încercați din nou mai târziu"</string>
     <string name="share">Partajați</string>
     <string name="share_album">Distribuiţi albumul</string>
     <string name="share_album_needs_auto_upload_tip">"Nu se poate dezactiva salvarea automată pentru albumele partajate"</string>
