--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -301,7 +301,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="eq_delete">Eliminaţi</string>
     <string name="eq_delete_success">Finalizat</string>
     <string name="eq_electronic">Electronic</string>
-    <string name="eq_flat">Flat</string>
+    <string name="eq_flat">Implicit</string>
     <string name="eq_hiphop">Hip Hop</string>
     <string name="eq_jazz">Jazz</string>
     <string name="eq_metal">Metal</string>
