--- a/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
@@ -29,7 +29,7 @@
     <string name="activity_stb_list_title">Alegeți tipul aparatului</string>
     <string name="actor_intro_title_text">Distribuție</string>
     <string name="add">Adăugare</string>
-    <string name="add_control">Adăugați o telecomandă pentru</string>
+    <string name="add_control">Telecomandă IR</string>
     <string name="add_control_frame">Adăugați o telecomandă pentru %1$s</string>
     <string name="add_device">Adăugați dispozitiv</string>
     <string name="add_device_match_desc_bottom">    3. Alegeți %1$s pentru a verifica conexiunea</string>
@@ -56,7 +56,7 @@
     <string name="apk_file_list_view_header">Un total de %d pachete</string>
     <string name="apk_files_list_title">Pachetul local de instalare</string>
     <string name="app_clear">Ștergeți datele</string>
-    <string name="app_detail_comments">Revizuiți</string>
+    <string name="app_detail_comments">Comentarii</string>
     <string name="app_detail_content_hidemore_text">Restrângeți</string>
     <string name="app_detail_content_showmore_text">Extingeți</string>
     <string name="app_detail_content_title_text">Titlu</string>
@@ -248,7 +248,7 @@
     <string name="epg_load_more_latest_comment">Se obțin mai multe recenzii</string>
     <string name="epg_loading_hint">Schimbați canalele de la decodor utilizând telefonul</string>
     <string name="epg_more_comment_list_title">Mai multe comentarii de top（%1$d）</string>
-    <string name="epg_name">programe TV</string>
+    <string name="epg_name">TV live</string>
     <string name="epg_no_booking_data">Nu există rezervări</string>
     <string name="epg_no_more_latest_comment">Nu există alte comentarii</string>
     <string name="epg_no_program_data">Nu am găsit date despre programe</string>
@@ -294,6 +294,7 @@
     <string name="fan_speed">Viteza</string>
     <string name="faq">Întrebări frecvente</string>
     <string name="fav">Favorit</string>
+    <string name="favorite_channel">Canale recente</string>
     <string name="feedback">Comentariu</string>
     <string name="feedback_error">Trimitere feedback erori</string>
     <string name="feedback_error_success_tip">feedback trimis cu succes</string>
@@ -345,7 +346,7 @@
     <string name="input_tip">Codurile expiră după 15 minute</string>
     <string name="install">Instalați</string>
     <string name="install_failed">"Nu s-a putut instala %s"</string>
-    <string name="install_peel_content">Pentru a activa funcția ghid TV, vă rugăm să instalați Peel pentru Telecomandă Mi.</string>
+    <string name="install_peel_content">Instalați Peel Mi Remote pentru a activa funcția ghid TV</string>
     <string name="install_peel_title">Instalați Peel Telecomandă Mi</string>
     <string name="install_succed">%s instalată</string>
     <string name="installing">Instalare……</string>
@@ -524,6 +525,7 @@ vă rog așteptați"</string>
     <string name="my_room">Camera mea</string>
     <string name="my_room_underline"><u>Camera mea</u></string>
     <string name="my_setting">Setările mele</string>
+    <string name="nearby">În apropiere</string>
     <string name="network_diagnosis">Testare rețea</string>
     <string name="network_no_connection">"Nu se poate conecta la rețea. Verificați conexiunea și reîncercați."</string>
     <string name="network_ok">Nu au fost detectate erori</string>
@@ -772,7 +774,7 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="rc_add_distance">%1$dm</string>
     <string name="rc_add_distance_far">&gt;1000km</string>
     <string name="rc_add_distance_km">%1$skm</string>
-    <string name="rc_name">Telecomandă</string>
+    <string name="rc_name">Telecomandă Mi</string>
     <string name="recover">Restaurați din Mi Cloud</string>
     <string name="recovering">Restaurare…</string>
     <string name="refreshing">Reîmprospătare…</string>
@@ -787,7 +789,7 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="repeat_diagnosis">Testați din nou</string>
     <string name="report_problem">Raportați probleme</string>
     <string name="require_login">Autentificați-vă mai întâi</string>
-    <string name="rescan">Căutați din nou</string>
+    <string name="rescan">Scanați din nou</string>
     <string name="reset">Restabilire</string>
     <string name="respond">Funcționează</string>
     <string name="retry_for_more">Apăsați pentru a vedea detalii</string>
@@ -854,6 +856,7 @@ direct din Blocarea ecranului"</string>
     <string name="select_dvb_carrier">Alegeți furnizorul de servicii</string>
     <string name="select_screenshot_topic">Alegeți subiectul</string>
     <string name="select_stb">Selectați decodorul</string>
+    <string name="select_stb_tips">Asociați decodorul</string>
     <string name="service_info">Informații serviciu</string>
     <string name="setting_airkan">WIRELESS DISPLAY</string>
     <string name="setting_common">GENERAL</string>
@@ -901,7 +904,7 @@ direct din Blocarea ecranului"</string>
     <string name="share_popup_single_desc">Utilizați telecomenzile partajate pentru a controla %1$s din apropiere</string>
     <string name="share_popup_single_title">%1$s: o telecomandă partajată pentru %2$s este disponibilă</string>
     <string name="share_popup_title">%1$s: o nouă telecomandă partajată este disponibilă</string>
-    <string name="share_rc_list_title">Vedeți telecomenzile partajate din apropiere</string>
+    <string name="share_rc_list_title">Telecomenzi IR din apropiere</string>
     <string name="share_rc_not_found">Nu s-au găsit telecomenzi de partajat în apropiere</string>
     <string name="share_rc_state_share">Partajare…</string>
     <string name="share_rc_title">Partajați telecomanda</string>
