--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -684,7 +684,7 @@
     <string name="used">Utilizat</string>
     <string name="user_cancel">Renunțare</string>
     <string name="user_center_title">Acasă</string>
-    <string name="user_desc_default_tip">Autentificați-vă pentru a colecta puncte și a cîștiga premii.</string>
+    <string name="user_desc_default_tip">Autentificați-vă pentru a colecta puncte și a câștiga premii.</string>
     <string name="user_follow_me_title">Urmăritorii mei</string>
     <string name="user_follow_title">Persoanele pe care le urmăresc</string>
     <string name="user_guide_continue_use">OK</string>
