--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -531,7 +531,7 @@ Părăsiţi această pagină?"</string>
     <string name="pref_enable_novels">Cărţi</string>
     <string name="pref_enable_videos">Videoclipuri</string>
     <string name="pref_extras_reset_default">Resetaţi la valorile prestabilite</string>
-    <string name="pref_extras_reset_default_dlg">Restabiliţi setările la valorile prestabilite?</string>
+    <string name="pref_extras_reset_default_dlg">Restabiliţi setările la valorile implicite?</string>
     <string name="pref_extras_reset_default_summary">Restabiliţi setările prestabilite</string>
     <string name="pref_extras_reset_default_title">Altele</string>
     <string name="pref_extras_send_feedback">Trimiteți un comentariu</string>
