--- a/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
+++ b/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
@@ -30,7 +30,7 @@ Pentru ştergerea istoricului din Browser, utilizaţi setările Browser-ului."</
     <string name="cta_declaration_negative_text">"Nu permite"</string>
     <string name="cta_declaration_positive_text">Permiteţi</string>
     <string name="cta_declaration_title">Condiții de utilizare</string>
-    <string name="default_hint">Căutați aplicații, muzică, videoclipuri, carți…</string>
+    <string name="default_hint">Căutați aplicații, muzică, videoclipuri, cărți…</string>
     <string name="default_search_domain">.google.ro</string>
     <string name="device_settings_category_title">Ştergeţi istoricul căutărilor</string>
     <string name="distance_unit_kilometer">km</string>
